// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render ConfirmationModal if action button is not clicked 1`] = `
<div>
  <Modal
    aria={
      Object {
        "describedby": "full_description",
        "labelledby": "heading",
      }
    }
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal"
    closeTimeoutMS={200}
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <h3
      className="modal__title"
      id="heading"
    />
    <p
      className="modal__body"
      id="full_description"
    />
    <button
      className="modal__btn--action"
    />
    <button
      className="modal__btn--cancel"
    >
      Cancel
    </button>
  </Modal>
</div>
`;

exports[`should render ConfirmationModal on confirmation button click 1`] = `
<div>
  <Modal
    aria={
      Object {
        "describedby": "full_description",
        "labelledby": "heading",
      }
    }
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal"
    closeTimeoutMS={200}
    contentLabel="MODAL TITLE"
    isOpen={true}
    onRequestClose={[MockFunction]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <h3
      className="modal__title"
      id="heading"
    >
      MODAL TITLE
    </h3>
    <p
      className="modal__body"
      id="full_description"
    >
      MODAL DESCRIPTION
    </p>
    <button
      className="modal__btn--action"
      onClick={[MockFunction]}
    >
      ACTION
    </button>
    <button
      className="modal__btn--cancel"
      onClick={[MockFunction]}
    >
      Cancel
    </button>
  </Modal>
</div>
`;
